--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
             <version>1.1.23</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
