--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,12 @@
     </properties>
 
     <dependencies>
+
         <!--拼音-->
         <dependency>
             <groupId>com.belerweb</groupId>
             <artifactId>pinyin4j</artifactId>
-            <version>2.5.1</version>
+            <version>2.5.0</version>
         </dependency>
 
         <!--生成QRcode-->
@@ -34,11 +35,11 @@
             <artifactId>core</artifactId>
             <version>3.4.1</version>
         </dependency>
-        <dependency>
-            <groupId>com.google.zxing</groupId>
-            <artifactId>javase</artifactId>
-            <version>3.4.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.google.zxing</groupId>-->
+<!--            <artifactId>javase</artifactId>-->
+<!--            <version>3.4.1</version>-->
+<!--        </dependency>-->
         <!--短信sdk-->
         <dependency>
             <groupId>com.aliyun</groupId>
@@ -132,6 +133,11 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>3.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
         </dependency>
 
     </dependencies>
