--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,35 +3,35 @@ server:
 spring:
   application:
     #应用的名称，可选
-    name: reggie_take_out
+    name: bowall
   shardingsphere:
     datasource:
       names:
-        master,slave
+        master
+        #,slave
       # 主数据源
       master:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        #        url: jdbc:mysql://124.222.114.143:3306/rw?characterEncoding=utf-8
-        url: jdbc:mysql://127.0.0.1:3306/bowall?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+        url: jdbc:mysql://47.98.224.129:3306/bowall?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
         username: root
-        password: 123456
-      #       从数据源
-      slave:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://127.0.0.1:3306/bowall?characterEncoding=utf-8
-        username: root
-        password: 123456
-    masterslave:
-      # 读写分离配置
-      load-balance-algorithm-type: round_robin
-      # 最终的数据源名称
-      name: dataSource
-      # 主库数据源名称
-      master-data-source-name: master
+        password: Yinxinba2!
+#      #       从数据源
+#      slave:
+#        type: com.alibaba.druid.pool.DruidDataSource
+#        driver-class-name: com.mysql.cj.jdbc.Driver
+#        url: jdbc:mysql://47.98.224.129:3306/bowall?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+#        username: root
+#        password: Yinxinba2!
+#    masterslave:
+#      # 读写分离配置
+#      load-balance-algorithm-type: round_robin
+#      # 最终的数据源名称
+#      name: dataSource
+#      # 主库数据源名称
+#      master-data-source-name: master
       # 从库数据源名称列表，多个逗号分隔
-      slave-data-source-names: slave
+#      slave-data-source-names: slave
     props:
       sql:
         show: true #开启SQL显示，默认false
@@ -61,6 +61,7 @@ mybatis-plus:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
 #    map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
 
 reggie:
   path: D:\Java\reggie_take_out\src\main\resources\img\
